<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/codigo_de_colores_de_resistencias"
        android:textColor="@android:color/black"
        android:textSize="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25sp"
            android:src="@drawable/izquierda" />

        <TextView
            android:id="@+id/banda1"
            android:layout_width="12dp"
            android:layout_height="103dp"
            android:background="@color/black"
            android:translationY="8dp">

        </TextView>


        <TextView
            android:layout_width="31dp"
            android:layout_height="97dp"
            android:background="@color/tan"
            android:translationY="11dp">

        </TextView>

        <TextView
            android:id="@+id/banda2"
            android:layout_width="12dp"
            android:layout_height="97dp"
            android:background="@color/black"
            android:translationY="11dp">

        </TextView>

        <TextView
            android:layout_width="31dp"
            android:layout_height="97dp"
            android:background="@color/tan"
            android:translationY="11dp">

        </TextView>

        <TextView
            android:id="@+id/banda3"
            android:layout_width="12dp"
            android:layout_height="97dp"
            android:background="@color/black"
            android:translationY="11dp">

        </TextView>

        <TextView
            android:layout_width="31dp"
            android:layout_height="97dp"
            android:background="@color/tan"
            android:translationY="11dp">

        </TextView>

        <TextView
            android:id="@+id/banda4"
            android:layout_width="12dp"
            android:layout_height="103dp"
            android:background="@color/black"
            android:translationY="8dp">

        </TextView>


        <ImageView
            android:layout_width="87dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:src="@drawable/derecha" />


    </LinearLayout>



    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/resultado_en_ohms"
        android:textSize="15dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/banda_1"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/banda_2"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="15dp"
            android:text="@string/banda_3"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="15dp"
            android:text="@string/banda_4"
            android:textColor="@android:color/black" />

    </RadioGroup>

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b1"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:background="@color/aliceblue"
            android:visibility="invisible" />

        <Button
                android:id="@+id/b2_negro"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5sp"
                android:layout_margin="5sp"
                android:background="@color/black" />

            <Button
                android:id="@+id/b3_negro"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5sp"
                android:layout_margin="5sp"
                android:background="@color/black" />

        <Button
            android:id="@+id/b4"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_margin="5sp"
            android:layout_marginLeft="5sp"
            android:background="@color/aliceblue"
            android:visibility="invisible" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b1_cafe"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_margin="5sp"
            android:layout_marginLeft="5sp"
            android:background="@color/sienna" />

        <Button
                android:id="@+id/b2_cafe"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5sp"
                android:layout_margin="5sp"
                android:background="@color/sienna" />

            <Button
                android:id="@+id/b3_cafe"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5sp"
                android:layout_margin="5sp"
                android:background="@color/sienna" />

            <Button
                android:id="@+id/b4_cafe"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5sp"
                android:layout_margin="5sp"
                android:background="@color/sienna" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b1_rojo"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/red" />

        <Button
            android:id="@+id/b2_rojo"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/red" />

        <Button
            android:id="@+id/b3_rojo"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/red" />

        <Button
            android:id="@+id/b4_rojo"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_margin="5sp"
            android:layout_marginLeft="5sp"
            android:background="@color/red" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b1_naranja"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/orange" />

        <Button
            android:id="@+id/b2_naranja"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/orange" />

        <Button
            android:id="@+id/b3_naranja"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/orange" />

        <Button
            android:id="@+id/b4_vacio"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_margin="5sp"
            android:layout_marginLeft="5sp"
            android:background="@color/aliceblue"
            android:visibility="invisible" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b1_amarillo"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/yellow" />

        <Button
            android:id="@+id/b2_amarillo"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/yellow" />

        <Button
            android:id="@+id/b3_amarillo"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/yellow" />

        <Button
            android:id="@+id/b4_vacio2"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_margin="5sp"
            android:layout_marginLeft="5sp"
            android:background="@color/aliceblue"
            android:visibility="invisible" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b1_verde"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/lime" />

        <Button
            android:id="@+id/b2_verde"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/lime" />

        <Button
            android:id="@+id/b3_verde"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/lime" />

        <Button
            android:id="@+id/b4_verde"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_margin="5sp"
            android:layout_marginLeft="5sp"
            android:background="@color/lime" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b1_azul"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/blue" />

        <Button
            android:id="@+id/b2_azul"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/blue" />

        <Button
            android:id="@+id/b3_azul"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/blue" />

        <Button
            android:id="@+id/b4_azul"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/blue" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b1_violeta"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/purple" />

        <Button
            android:id="@+id/b2_violeta"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/purple" />

        <Button
            android:id="@+id/b3_violeta"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/purple" />

        <Button
            android:id="@+id/b4_violeta"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/purple" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b1_gris"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/gray" />

        <Button
            android:id="@+id/b2_gris"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/gray" />

        <Button
            android:id="@+id/b3_gris"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/gray" />

        <Button
            android:id="@+id/b4_gris"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/gray" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b1_blanco"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/white" />

        <Button
            android:id="@+id/b2_blanco"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/white" />

        <Button
            android:id="@+id/b3_blanco"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/white" />

        <Button
            android:id="@+id/b4_blanco"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/white" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_margin="5sp"
            android:layout_marginLeft="5sp"
            android:background="@color/aliceblue"
            android:visibility="invisible" />

        <Button
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_margin="5sp"
            android:layout_marginLeft="5sp"
            android:background="@color/aliceblue"
            android:visibility="invisible" />

        <Button
            android:id="@+id/b3_dorado"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/goldenrod" />

        <Button
            android:id="@+id/b4_dorado"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginRight="25sp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/goldenrod" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_margin="5sp"
            android:layout_marginLeft="5sp"
            android:background="@color/aliceblue"
            android:visibility="invisible" />

        <Button
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_margin="5sp"
            android:layout_marginLeft="5sp"
            android:background="@color/aliceblue"
            android:visibility="invisible" />

        <Button
            android:id="@+id/b3_plateado"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/silver" />

        <Button
            android:id="@+id/b4_plateado"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:layout_margin="5sp"
            android:background="@color/silver" />

    </TableRow>
</TableLayout>
    </LinearLayout>
</ScrollView>

